BUGFIX: Fixed galery overflow when hover

--- a/src/css/imageGalery.css
+++ b/src/css/imageGalery.css
@@ -1,7 +1,9 @@
 #galery{
     display: flex;
     flex-wrap: wrap;
-    padding: 10px 20px;
+    padding: 15px 20px;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .column{
@@ -19,7 +21,8 @@
 
 .column img:hover {
     cursor: pointer;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
     transform: scale(1.2);
 }
 
